--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.1",
 		"publint": "^0.3.15",
+		"supabase": "^2.64.2",
 		"svelte": "^5.43.8",
 		"svelte-check": "^4.3.4",
 		"tailwindcss": "^4.1.17",
@@ -71,6 +72,7 @@
 		"svelte"
 	],
 	"dependencies": {
+		"@supabase/supabase-js": "^2.86.0",
 		"@xyflow/svelte": "^1.4.2"
 	}
 }
